--- a/.github/workflows/star-list.yml
+++ b/.github/workflows/star-list.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Awesome generator
-        uses: simonecorsi/mawesome@v2
+        uses: simonecorsi/mawesome@latest
         with:
-          api-token: ${{ secrets.ACCESS_TOKEN }}
+          api-token: ${{ secrets.API_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           github-email: ${{ secrets.USER_EMAIL }}
-          template-path: "/template/README.ejs"
           github-name: ${{ github.repository_owner }}
